--- a/MyMonee-Final/Views/AddHomeViewController.xib
+++ b/MyMonee-Final/Views/AddHomeViewController.xib
@@ -24,6 +24,7 @@
             <connections>
                 <outlet property="fieldJudul" destination="aur-L0-1By" id="CjY-bv-YsZ"/>
                 <outlet property="fieldJumlah" destination="My6-rS-XnM" id="pda-Yk-i2m"/>
+                <outlet property="loading" destination="cdA-gO-cMz" id="eBo-6Z-Rsm"/>
                 <outlet property="pemasukan" destination="JbG-Qa-SPg" id="sU7-lb-ax6"/>
                 <outlet property="penarikan" destination="1k7-NX-oOn" id="n07-N9-qbo"/>
                 <outlet property="simpan" destination="5Rz-im-yVn" id="Lj0-Ok-UMr"/>
@@ -42,7 +43,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="379" height="667"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q93-hJ-3T3">
-                                    <rect key="frame" x="22.5" y="20" width="165" height="24"/>
+                                    <rect key="frame" x="22.5" y="20" width="186" height="24"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="24" id="MFj-eG-DFp"/>
                                     </constraints>
@@ -55,7 +56,7 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Judul" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jkj-Y0-BHK">
-                                    <rect key="frame" x="20" y="67" width="34.5" height="21"/>
+                                    <rect key="frame" x="20" y="67" width="38.5" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="rC1-Oc-eZa"/>
                                     </constraints>
@@ -64,7 +65,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jumlah (Rp)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6S-ww-LLg">
-                                    <rect key="frame" x="20" y="133" width="74.5" height="21"/>
+                                    <rect key="frame" x="20" y="133" width="90" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="KMH-Nb-EBC"/>
                                     </constraints>
@@ -91,7 +92,7 @@
                                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                 </textField>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kategori Penggunaan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LdB-cJ-IAV">
-                                    <rect key="frame" x="20" y="203" width="145.5" height="21"/>
+                                    <rect key="frame" x="20" y="203" width="166" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="9Hu-jP-XfG"/>
                                     </constraints>
@@ -190,6 +191,9 @@
                                         <outletCollection property="gestureRecognizers" destination="ZOu-KI-X8s" appends="YES" id="628-ZP-mRU"/>
                                     </connections>
                                 </view>
+                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="cdA-gO-cMz">
+                                    <rect key="frame" x="171" y="315" width="37" height="37"/>
+                                </activityIndicatorView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
@@ -203,11 +207,13 @@
                                 <constraint firstItem="1k7-NX-oOn" firstAttribute="centerY" secondItem="JbG-Qa-SPg" secondAttribute="centerY" id="A3i-jW-lrU"/>
                                 <constraint firstItem="1k7-NX-oOn" firstAttribute="bottom" secondItem="JbG-Qa-SPg" secondAttribute="bottom" id="D5g-64-SvN"/>
                                 <constraint firstAttribute="trailing" secondItem="5Rz-im-yVn" secondAttribute="trailing" constant="22" id="DfB-Di-xS2"/>
+                                <constraint firstItem="cdA-gO-cMz" firstAttribute="centerY" secondItem="be1-af-d0r" secondAttribute="centerY" id="KjW-7j-ksn"/>
                                 <constraint firstItem="JbG-Qa-SPg" firstAttribute="leading" secondItem="be1-af-d0r" secondAttribute="leading" constant="16" id="NZT-Ii-ynO"/>
                                 <constraint firstItem="LdB-cJ-IAV" firstAttribute="leading" secondItem="My6-rS-XnM" secondAttribute="leading" id="OFG-2r-xMv"/>
                                 <constraint firstItem="1k7-NX-oOn" firstAttribute="leading" secondItem="JbG-Qa-SPg" secondAttribute="trailing" constant="13" id="Pqa-je-Bb8"/>
                                 <constraint firstItem="My6-rS-XnM" firstAttribute="top" secondItem="h6S-ww-LLg" secondAttribute="bottom" id="Q63-Mc-b8j"/>
                                 <constraint firstItem="1k7-NX-oOn" firstAttribute="top" secondItem="JbG-Qa-SPg" secondAttribute="top" id="VPJ-2x-8r3"/>
+                                <constraint firstItem="cdA-gO-cMz" firstAttribute="centerX" secondItem="be1-af-d0r" secondAttribute="centerX" id="VqH-Uv-JQg"/>
                                 <constraint firstItem="Jkj-Y0-BHK" firstAttribute="top" secondItem="Q93-hJ-3T3" secondAttribute="bottom" constant="23" id="Ye5-yo-KwL"/>
                                 <constraint firstAttribute="trailing" secondItem="aur-L0-1By" secondAttribute="trailing" constant="20" id="bpV-gS-g56"/>
                                 <constraint firstAttribute="trailing" secondItem="1k7-NX-oOn" secondAttribute="trailing" constant="16" id="epZ-Wu-XtS"/>
